# coke_fetcher

./: README.md
beta_navigator/: CMakeLists.txt  README.md  package.xml
beta_navigator/action/: navigator.action
beta_navigator/launch/: jinx_amcl.launch  jinx_vending.launch  main.rviz  ps8.rviz
beta_navigator/src/: append_path_client.cpp  lidar_alarm.cpp  lidar_detector.cpp  lin_steering_wrt_odom.cpp  mobot_general.cpp  mobot_nl_steering.cpp  navigator.cpp  navigator_action_client.cpp  odom_tf_fncs.cpp  pub_des_state.cpp  pub_des_state_2.cpp  pub_des_state_main.cpp
coke_garbber/: CMakeLists.txt  README.md  package.xml
coke_garbber/action/: coke_grabber.action
coke_garbber/launch/: baxter_nodes.launch  coke_grabber.launch  moveit_grabber.launch
coke_garbber/src/: BaxterArmCommander.cpp  BaxterGripper.cpp  SimpleCokeFinder.cpp  SimpleCokeFinder.h  baxter_arm_test.cpp  example_object_grabber_action_client.cpp  object_grabber_as.cpp
coke_grabber/: README.md  arm_joints
coke_grabber/launch/: base_kinect.launch  coke_grabber.launch  moveit_grabber.launch
coke_grabber/src/: ArmMotionCommander.cpp  BaxterArmCommander.cpp  (+5 more)
coordinator/: CMakeLists.txt  README.md  package.xml
motion_library/: CMakeLists.txt  README.md  package.xml
motion_library/include/mobot_general/: mobot_general.h
motion_library/include/mobot_nl_steering/: mobot_nl_steering.h
motion_library/include/odom_tf/: odom_tf.h
motion_library/include/pub_des_state/: pub_des_state.h
motion_library/include/steering_algorithm/: steering_algorithm.h
motion_library/include/traj_builder/: traj_builder.h
motion_library/launch/: jinx_openloop.launch  jinx_vending.launch
motion_library/msg/: lidar.msg
motion_library/src/: append_path_client.cpp  lidar_detector.cpp  lin_steering_wrt_odom.cpp  mobot_general.cpp  mobot_nl_steering.cpp  odom_tf_fncs.cpp  open_loop_controller.cpp  pub_des_state.cpp  pub_des_state_main.cpp  traj_builder.cpp
navigator/: CMakeLists.txt  package.xml
object_finder/: CMakeLists.txt  package.xml
object_grabber/: CMakeLists.txt  package.xml
(+20 files in other folders)
